--- a/working document.html
+++ b/working document.html
@@ -1,4 +1,14 @@
 <!DOCTYPE html>
 <html>
-
+	<head>
+		<title>Quotes generator</title>
+	</head>
+	<body>
+		<style>
+		</style>
+		<h1> Press the buttons to veiw quotes </h1>
+		<script>
+		</script>
+	</body>
+	
 </html>
